--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset= "utf-8" />
-    <title>DXOpal game</title>
+    <title>学校の課題！！！(迫真)</title>
     <script type="text/javascript" src="dxopal.min.js"></script>
     <script type="text/ruby">
       DXOpal.dump_error{ require_remote "main.rb?#{Time.now}" }
